# BH_CGYY

./: .env.example  .gitignore  LICENSE  README.md  fix_ddddocr.py  pyproject.toml  requirements.txt
scripts/: build_cli_full.sh  build_cli_lite.sh  build_ui_app.sh  gen_app_icon.sh  notify_ios.sh  notify_macos.sh  poll_reserve.sh  reserve_once.sh
src/: logging_setup.py  main.py  main_lite.py  notifier.py  runtime_paths.py
src/api/: auth_api.py  captcha_api.py  cashier_api.py  cashier_client.py  catalog_api.py  client.py  endpoints.py  reservation_api.py
src/auth/: __init__.py  cashier_auth_service.py  cgyy_auth_service.py  exceptions.py  manager.py  models.py  services.py
src/cli/: __init__.py  commands.py  context.py  normalize.py  parser.py  validators.py
src/config/: env_store.py  profiles.py  settings.py
src/core/: captcha_service.py  catalog_service.py  exceptions.py  payment_service.py  reservation_service.py  selection_strategies.py  workflow.py
src/http/: base_client.py  header_profiles.py
src/parsers/: __init__.py  auth.py  captcha.py  cashier.py  catalog.py  common.py  day_info.py  order.py  slot_filter.py
src/presenters/: __init__.py  format.py
src/sso/: __init__.py  exceptions.py  models.py  service.py
src/tests/: test_auth_service.py  test_booking_card_dates.py  test_cashier_api.py  test_cashier_auth_service.py  test_cli_commands.py  test_cli_doctor.py  test_cli_parser.py  test_cli_payment.py  test_cli_registry.py  test_cli_reservation.py  test_custom_combo_popup.py  test_env_store.py  test_main.py  test_notifier.py  test_parsers_auth.py  test_parsers_captcha.py  test_parsers_cashier.py  test_parsers_catalog.py  test_parsers_day_info.py  test_parsers_order.py  test_parsers_order_pay.py  test_payment_service.py  test_poll_dialog.py  test_presenters.py  test_profiles.py  test_runtime_paths.py  test_sso_cas_parser.py  test_steps.py  test_ui_controller.py  test_ui_facade.py  test_ui_form_states.py  test_ui_homepage.py  test_ui_mappers.py  test_ui_polling.py  test_ui_styles.py  test_ui_tasks.py  test_ui_widgets.py  (+2 more)
(+62 files in other folders)
