[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "buaa-cgyy"
version = "1.0.1"
description = "BUAA CGYY 场地预约"
readme = "docs/README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pycryptodome>=3.15.0",
    "ddddocr>=1.4.0",
    "opencv-python-headless>=4.5.0",
    "Pillow>=9.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
cgyy = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
